--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,8 @@
     width: 100%;
     min-height: 100vh;
 }
-.header-section h1{
+.header-section h1 {
+    line-height: 65px;
     font-weight: 600;
     font-size: 45px;
     letter-spacing: 1px;
@@ -49,6 +50,14 @@
     height: 100%;
     border-radius: 50%;
 }
+.navbar-brand {
+    width: 280px;
+    height: 45px;
+}
+.navbar-brand img{
+    width: 100%;
+    height: 100%;
+}
 .navbar-light .navbar-nav .nav-link,
 .navbar-light .navbar-nav .nav-link:hover, 
 /* .navbar-light .navbar-brand,  */
@@ -61,4 +70,7 @@
 .slider-section{
     margin-top: 60px;
     margin-bottom: 30px;
+}
+.carousel-item p{
+    letter-spacing: .6px;
 }
