--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,9 @@
     width: 100%;
     height: 400px;
 }
-
+.enroll-btn {
+    padding: 13px 65px;
+}
 /*------ Next Batch section ------*/
 .nxt-batch{
     margin-top: -100px;
