--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,8 +118,7 @@
 }
 .check-icon{
     margin-top: 6px;
-    width: 24%;
-    height: 15%;
+    height: 23px;
     border-radius: 4px;
     margin-right: 8px;
 }
