Course speciality sec almost done

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,8 +106,8 @@
 }
 
 /*------ Course Outline Style ------*/
-.course-outline{
-    margin-top: 50px;
+.course-outline, .speciality-sec{
+    margin-top: 60px;
 }
 .enroll, .enroll:hover {
     width: 100%;
@@ -118,7 +118,16 @@
 }
 .check-icon{
     margin-top: 6px;
-    height: 23px;
+    height: 22px;
     border-radius: 4px;
     margin-right: 8px;
+    background-color: #FF6347;
+}
+
+/*------ Course Speciality ------*/
+.speciality-sec .row h5{
+    font-size: 17px;
+}
+.speciality-sec .row h6{
+    font-size: 14px;
 }
